--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.7.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
   },
@@ -30,4 +33,3 @@
     ]
   }
 }
-
