--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dogtinder",
-  "version": "1.0",
+  "version": "",
   "description": "",
   "author": "Idolized Intimidators",
   "license": "GNU GPL",
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "nodemon basic-server.js",
-    "build": "webpack -w"
+    "build": "webpack",
+    "build:watch": "webpack --watch"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
@@ -25,7 +26,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.7.2",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "babel": {
     "presets": [
