--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
-    "chai": "^3.5.0",
     "express": "^4.15.2",
     "pg": "^6.1.5",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "supertest": "^3.0.0"
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "supertest": "^3.0.0",
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
