--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "scripts": {
     "start": "nodemon basic-server.js ",
     "build": "webpack",
-    "build:watch": "webpack --watch"
+    "build:watch": "webpack --watch",
+    "postinstall": "webpack"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "passport": "^0.3.2",
     "pg": "^6.1.5",
     "querystring": "^0.2.0",
     "react": "^15.5.4",
