--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nodemon basic-server.js ",
     "build": "webpack",
     "build:watch": "webpack --watch",
-    "postinstall": "webpack"
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
