--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "request": "^2.81.0",
-    "sequelize": "^3.30.4"
+    "sequelize": "^3.30.4",
+    "webpack": "^2.4.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -35,7 +36,6 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.7.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
   },
   "babel": {
