--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "react-dom": "^15.5.4",
     "request": "^2.81.0",
     "sequelize": "^3.30.4",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.7.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "supertest": "^3.0.0",
-    "babel-cli": "^6.7.5",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.7.2",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "webpack-dev-server": "^2.4.5"
   },
