--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "build:watch": "webpack --watch"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "pg": "^6.1.5",
+    "query-string": "^4.3.4",
     "querystring": "^0.2.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
