--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
     "heroku-postbuild": "webpack"
   },
   "dependencies": {
+    "babel-cli": "^6.7.5",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.7.2",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "pg": "^6.1.5",
     "querystring": "^0.2.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "request": "^2.81.0",
     "sequelize": "^3.30.4",
-    "webpack": "^2.4.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.7.2"
+    "webpack": "^2.4.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
