--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:watch": "webpack --watch"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
