--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-numeric-input": "^2.0.7",
+    "react-swipe-card": "^0.1.4",
     "request": "^2.81.0",
     "sequelize": "^3.30.4",
     "webpack": "^2.4.1"
