--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ build/
 dist/
 data/
 
+logfile
+
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
