--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-swipe-card": "^0.1.4",
     "request": "^2.81.0",
     "sequelize": "^3.30.4",
+    "universal-cookie": "^2.0.5",
+    "universal-cookie-express": "^2.0.5",
     "webpack": "^2.4.1"
   },
   "devDependencies": {
