--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "html-entities": "^1.2.1",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "passport": "^0.3.2",
