--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-register": "^6.7.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "connect-redis": "^3.3.0",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
