--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku-postbuild": "webpack"
   },
   "dependencies": {
+    "@google-cloud/vision": "^0.11.2",
     "axios": "^0.16.1",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.24.1",
