--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "connect-redis": "^3.3.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.4.5",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "html-entities": "^1.2.1",
@@ -40,10 +41,12 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-dropzone": "^3.13.1",
     "react-numeric-input": "^2.0.7",
     "react-swipe-card": "^0.1.4",
     "request": "^2.81.0",
     "sequelize": "^3.30.4",
+    "superagent": "^3.5.2",
     "universal-cookie": "^2.0.5",
     "universal-cookie-express": "^2.0.5",
     "webpack": "^2.4.1"
