--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dotenv-webpack": "^1.4.5",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "google-maps-react": "^1.0.19",
     "html-entities": "^1.2.1",
+    "jquery": "^3.2.1",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "passport": "^0.3.2",
